--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -18,7 +18,6 @@
     color: black;
     text-decoration: none;
     margin: 0;
-    padding:5px 5px;
     margin:0 10px;
 }
 
@@ -125,8 +124,20 @@
     margin-left: 0;
 }
 
+.indicator {
+    position: relative;
+    height: 20px;
+    width: 20px !important;
+    top: -15px;
+    left: -5px;
+    visibility: hidden;
+}
 
-
-
-
-
+.indicatorNumber {
+    color: white;
+    position: relative;
+    top: -2px;
+    left: -35px;
+    text-decoration: none;
+    visibility: hidden;
+}
