--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -63,14 +63,14 @@
 }
 
 .button{
-    width: 100%;
-    height: 50px;
-    margin-bottom: 10px;
-    font-size: 30px;
-    color: black;
+    width: 100% !important;
+    height: 50px !important;
+    margin-bottom: 10px !important;
+    font-size: 30px !important;
+    color: black !important;
     --bs-btn-hover-color: #f8f9fa;
-    line-height: 30px;
-    font-weight: bold;
+    line-height: 30px !important;
+    font-weight: bold !important;
 }
 
 .riadok {
