--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -92,6 +92,13 @@
 .bg-color{
     background-color: #9dd2ea;
 }
+.background {
+    background-image: url("https://t3.ftcdn.net/jpg/03/66/59/54/360_F_366595406_YbJE6sWiXnFQet80DPzTnRXKjk8vCtfa.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    height: 92.9vh;
+}
 
 .align{
     text-align: center;
@@ -120,6 +127,11 @@
     height: 100px;
 }
 
+.z-index{
+    z-index: 200 !important;
+    position: relative !important;
+}
+
 .riadokMargin{
     margin-left: 0;
 }
@@ -128,17 +140,21 @@
     position: relative;
     height: 20px;
     width: 20px !important;
-    top: -5px;
-    left: -5px;
+    top: -15px;
+    left: -10px;
     visibility: hidden;
+}
+
+.none-decoration{
+    text-decoration: none;
 }
 
 .indicatorNumber {
     color: white;
     position: relative;
     font-size: 16px;
-    top: -7px;
-    left: -19px;
+    top: -13px;
+    left: -29px;
     text-decoration: none;
     visibility: hidden;
 }
@@ -166,6 +182,8 @@
 
 .brandFont{
     font-size: 20px;
+    color: darkblue;
+    font-weight:500;
 }
 
 .productDelete{
@@ -177,3 +195,11 @@
     color: red;
     text-decoration: none;
 }
+
+.bg-color-blue{
+    background-color: rgba(110, 207, 255, 0.2);
+}
+
+
+
+
